[package]
name = "dilok-did"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# DID and Cryptography
didkit = "0.3"
ed25519-dalek = "1.0"
sha2 = "0.10"
base64 = "0.21"

# Face Recognition
dlib = "0.5"
image = "0.24"

# Storage
rocksdb = "0.21"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# API
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[[example]]
name = "test_integration"
path = "examples/test_integration.rs" 